force-app/main/default/objects/ImportShippingCosts__c/ImportShippingCosts__c.object-meta.xml
<CustomObject>
    <label>Import Shipping Costs</label>
    <nameField>
        <displayFormat>Import Shipping {00000}</displayFormat>
        <label>ImportShippingCost No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Import Shipping Costs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>