force-app/main/default/objects/ImportShippingCosts__c/fields/charge__c.field-meta.xml
<CustomField>
    <fullName>charge__c</fullName>
    <label>charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>