force-app/main/default/objects/ImportShippingCosts__c/fields/ImportExpectedCount__c.field-meta.xml
<CustomField>
    <fullName>ImportExpectedCount__c</fullName>
    <label>Import Expected Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>