force-app/main/default/objects/ImportShippingCosts__c/fields/Importnumber__c.field-meta.xml
<CustomField>
    <fullName>Importnumber__c</fullName>
    <label>Import number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>