force-app/main/default/objects/ImportShippingCosts__c/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <label>name</label>
    <length>155</length>
    <type>Text</type>
</CustomField>