force-app/main/default/objects/ImportShippingCosts__c/fields/perItemRate__c.field-meta.xml
<CustomField>
    <fullName>perItemRate__c</fullName>
    <label>perItemRate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>