force-app/main/default/objects/ImportShippingCosts__c/fields/rangeValue__c.field-meta.xml
<CustomField>
    <fullName>rangeValue__c</fullName>
    <label>rangeValue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>