force-app/main/default/objects/ImportShippingCosts__c/fields/shippingRule__c.field-meta.xml
<CustomField>
    <fullName>shippingRule__c</fullName>
    <label>shippingRule</label>
    <length>155</length>
    <type>Text</type>
</CustomField>