force-app/main/default/objects/ImportShippingCosts__c/fields/subsidiary__c.field-meta.xml
<CustomField>
    <fullName>subsidiary__c</fullName>
    <label>subsidiary</label>
    <length>36</length>
    <type>Text</type>
</CustomField>