force-app/main/default/objects/ImportShippingCosts__c/fields/weightQuantity__c.field-meta.xml
<CustomField>
    <fullName>weightQuantity__c</fullName>
    <label>weightQuantity</label>
    <length>155</length>
    <type>Text</type>
</CustomField>